--- a/hello.html
+++ b/hello.html
@@ -1047,7 +1047,7 @@ mask-image: linear-gradient(to top, transparent 40%, #079097 80%) !important;
         <div class="night"></div>
         <div class="moon"><h1 class="happy">Happy</h1>
             <h1 class="val">Valantince Day</h1>
-        <h1 class="name">Meenu</h1>
+        <h1 class="name">Name</h1>
         </div>
         <div class="flowers">
           <div class="flower flower--1">
